--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,5 +1,15 @@
 <h1>Make your form here</h1>
 
-<form>
+<form method="post" action="/pirates">
+  <label for="name"> Pirate Name</label>
+  <input type="text" id="name" name="pirate[name]">
+  <label for="weight"> Pirate weight</label>
+  <input type="integer" id="weight" name="pirate[weight]">
+  <label for="height"> Pirate heighte</label>
+  <input type="text" id="height" name="pirate[height]">
   
+  <input type="text" id="height" name="pirate[ships][][name]">  
+  <input type="text" id="height" name="pirate[ships][][type]">
+  <input type="text" id="height" name="pirate[ships][][booty]">
+  <input type="submit" value="submit">
 </form>
