--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,13 @@
-<h1>Display your Pirate here</h1>
+<h1><%= @pirates.name %></h1>
 
+<!--<h3><%= @pirates.weight %></h3>-->
+<!--<h3><%= @pirates.height %></h3>-->
 
 <h2>Display your first ship here</h2>
-
-
+<!--<h3><%= @pirates.ships[0].name %></h3>-->
+<!--<h3><%= @pirates.ships[0].type %></h3>-->
+<!--<h3><%= @pirates.ships[0].booty %></h3>-->
 <h2>Display your second ship here</h2>
+<!--<h3><%= @pirates.ships[1].name %></h3>-->
+<!--<h3><%= @pirates.ships[1].type %></h3>-->
+<!--<h3><%= @pirates.ships[1].booty %></h3>-->
