--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -8,8 +8,12 @@
   <label for="height"> Pirate heighte</label>
   <input type="text" id="height" name="pirate[height]">
   
-  <input type="text" id="height" name="pirate[ships][][name]">  
-  <input type="text" id="height" name="pirate[ships][][type]">
-  <input type="text" id="height" name="pirate[ships][][booty]">
-  <input type="submit" value="submit">
+  <input type="text" id="ship_name_1" name="pirate[ships][][name]">  
+  <input type="text" id="ship_type_1" name="pirate[ships][][type]">
+  <input type="text" id="ship_booty_1" name="pirate[ships][][booty]">
+  
+  <input type="text" id="ship_name_2" name="pirate[ships][][name]">  
+  <input type="text" id="ship_type_2" name="pirate[ships][][type]">
+  <input type="text" id="ship_booty_2" name="pirate[ships][][booty]">
+  <input type="submit" value="Submit" id="Submit">
 </form>
