--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,13 +1,11 @@
 <h1><%= @pirates.name %></h1>
+ <h3><%= @pirates.weight %></h3>
+ <h3><%= @pirates.height %></h3>
 
-<!--<h3><%= @pirates.weight %></h3>-->
-<!--<h3><%= @pirates.height %></h3>-->
 
-<h2>Display your first ship here</h2>
-<!--<h3><%= @pirates.ships[0].name %></h3>-->
-<!--<h3><%= @pirates.ships[0].type %></h3>-->
-<!--<h3><%= @pirates.ships[0].booty %></h3>-->
-<h2>Display your second ship here</h2>
-<!--<h3><%= @pirates.ships[1].name %></h3>-->
-<!--<h3><%= @pirates.ships[1].type %></h3>-->
-<!--<h3><%= @pirates.ships[1].booty %></h3>-->
+<h2><%= @ships[0].name %></h2>
+<h2><%= @ships[0].type %></h2>
+<h2><%= @ships[0].booty %></h2>
+<h2><%= @ships[1].name %></h2>
+<h2><%= @ships[1].type %></h2>
+<h2><%= @ships[1].booty %></h2>
