--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,29 @@
 <h1>Make your form here</h1>
+
+<!--  Make a nested form (this should probably have html <label>s so it makes sense to a user). -->
+<!--  This form will be creating three objects (one instance of the Pirate class, -->
+<!--  and two instances of the Ship class). -->
+<!--  Remember, you'll need to build a corresponding controller action to load this page. -->
+<!--  Your form should POST to the route '/pirates'.-->
+
+<form action='/pirates' method="post">
+  Pirate Name: <input id="pirate_name" type="text" name="pirate[name]">
+  <br>
+  Pirate Weight: <input id="pirate_weight" type="text" name="pirate[weight]">
+  <br>
+  Pirate Height: <input id="pirate_height" type="text" name="pirate[height]">
+  <br><br>
+  Ship Name: <input id="ship_name_1" type="text" name="pirate[ships][][name]">
+  <br>
+  Ship Type: <input id="ship_type_1" type="text" name="pirate[ships][][type]">
+  <br>
+  Ship Booty: <input id="ship_booty_1" type="text" name="pirate[ships][][booty]">
+  <br><br>
+  Ship Name: <input id="ship_name_2" type="text" name="pirate[ships][][name]">
+  <br>
+  Ship Type: <input id="ship_type_2" type="text" name="pirate[ships][][type]">
+  <br>
+  Ship Booty: <input id="ship_booty_2" type="text" name="pirate[ships][][booty]">
+  <br>
+  <button type="submit" value="Submit">Submit</button>
+</form>
