--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,20 @@
-<h1>Display your Pirate here</h1>
+<!--You should have a page that shows the pirate you created along with their ships -->
+<!--and all the details about the pirate and their ships.-->
+<h1>Pirate</h1>
+<div class="pirate">
+  <h3>Name: <%= @pirate.name %></h3>
+  <h4>Weight: <%= @pirate.weight %></h4>
+  <h4>Height: <%= @pirate.height %></h4>
+</div>
 
+<!--<h2>Display your first ship here</h2>-->
+<!--<h2>Display your second ship here</h2>-->
 
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<h2>Ships</h2>
+<% @ships.each do |ship| %>
+  <div class="ship">
+    <p>Name: <%= ship.name %></p>
+    <p>Type: <%= ship.type %></p>
+    <p>Booty: <%= ship.booty %></p>
+  </div><br>
+<% end %>
